base: fix z-index issues

--- a/profiles/base10/resources/css/base-theme.css
+++ b/profiles/base10/resources/css/base-theme.css
@@ -201,6 +201,7 @@ pb-document {
     grid-row-start: 1;
     width: 100vw;
     background-color: transparent;
+    z-index: 1;
 }
 
 .page-header > div {
